--- a/src/components/slides/Slide2.css
+++ b/src/components/slides/Slide2.css
@@ -1,6 +1,7 @@
 .slide2-container {
   width: 100%;
-  height: 500px;
+  min-height: 89vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
